<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherUpdatesActivity">

    <!-- EditText for location input -->
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location_hint"
        android:inputType="textPostalAddress"
        android:padding="16dp"
        android:importantForAutofill="yes"
        android:autofillHints="postalCode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Button to get weather updates -->
    <Button
        android:id="@+id/btnGetWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        app:layout_constraintTop_toBottomOf="@id/etLocation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <!-- TextView for displaying weather information -->
    <TextView
        android:id="@+id/tvWeatherInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_info_placeholder"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnGetWeather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
